tests/specs/ecosystem/ayonli/jsext/0_8_40.test
ayonli/jsext/0.8.40
-- deno.lock --
{
  "version": "3",
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
error: TS2411 [ERROR]: Property '"--"' of type 'string[] | undefined' is not assignable to 'string' index type 'string | number | boolean | (string | number | boolean)[]'.
  "--"?: string[];
  ~~~~
    at file://<tmpdir>/cli.ts:173:3

TS2503 [ERROR]: Cannot find namespace 'NodeJS'.
 */ export function isMain(module: NodeJS.Module): boolean;
                                   ~~~~~~
    at file://<tmpdir>/module.ts:58:36

TS2503 [ERROR]: Cannot find namespace 'NodeJS'.
 */ export default function read<T>(target: NodeJS.EventEmitter, eventMap?: {
                                            ~~~~~~
    at file://<tmpdir>/read.ts:79:45

TS2503 [ERROR]: Cannot find namespace 'NodeJS'.
 */ export function refTimer(timer: NodeJS.Timeout | number): void {}
                                    ~~~~~~
    at file://<tmpdir>/runtime.ts:50:37

TS2503 [ERROR]: Cannot find namespace 'NodeJS'.
 */ export function unrefTimer(timer: NodeJS.Timeout | number): void {}
                                      ~~~~~~
    at file://<tmpdir>/runtime.ts:56:39

Found 5 errors.

